Created sponsor list item

--- a/index.html
+++ b/index.html
@@ -1,22 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- header part -->
-    <HEader>
+    <Header>
 
-    </HEader>
-<!-- main part -->
+        <nav>
+            <h2 class="header-title">Influencer products</h2>
+
+            <ul>
+                <li>Home</li>
+                <li>Products</li>
+                <li>Sign Up</li>
+                <li>Log In</li>
+                <img src="" alt="">
+            </ul>
+        </nav>
+        <div class="banner">
+            <div>
+                <h2 class="banner-title">Start your Journey as <br>
+                    Influencer</h2>
+                <p class="banner-disc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn-primary">Preebook now</button>
+
+            </div>
+           
+            <div class="banner-pic">
+                <img src="images/main-camera.png" alt="">
+            </div>
+        </div>
+        <section>
+        <div class="sponsor">
+            <ul class="sponsor-list">
+                <li><img src="logos/Alibaba.svg" alt=""></li>
+                <li><img src="logos/Amazon.svg" alt=""></li>
+                <li><img src="logos/Daraz.pk Logo.svg" alt=""></li>
+                <li><img src="logos/Ebay.svg" alt=""></li>
+                <li><img src="logos/Rakuten.svg" alt=""></li>
+                <li><img src="logos/Target.svg" alt=""></li>
+                <li><img src="logos/Walmart.svg" alt=""></li>
+            </ul>
+        </div>
+    </section>
+
+
+    </Header>
+    <!-- main part -->
     <main>
 
     </main>
-<!-- footer part -->
+    <!-- footer part -->
     <footer>
 
     </footer>
 </body>
+
 </html>
